<resources>
    <string name="app_name">RadioGroupFramentDemo</string>
    <string name="home_page">首页</string>
    <string name="category">分类</string>
    <string name="shopping_cart">购物车</string>
    <string name="news">消息</string>
    <string name="business_sigh_in">商家登录</string>
    <string name="user">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
