<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zestzone.radiogroupframentdemo.MainActivity">

    <FrameLayout
        android:layout_above="@id/tab_radio_group"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <RadioGroup
        android:id="@+id/tab_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/home_radio"
            style="@style/tab_radio_style"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_home_selector"
            android:text="@string/home_page" />

        <RadioButton
            android:id="@+id/category_radio"
            style="@style/tab_radio_style"
            android:drawableTop="@drawable/tab_category_selector"
            android:text="@string/category" />

        <RadioButton
            android:id="@+id/shopping_cart_radio"
            style="@style/tab_radio_style"
            android:drawableTop="@drawable/tab_shopping_cart_selector"
            android:text="@string/shopping_cart" />

        <RadioButton
            android:id="@+id/news_radio"
            style="@style/tab_radio_style"
            android:drawableTop="@drawable/tab_news_selector"
            android:text="@string/news" />

        <RadioButton
            android:id="@+id/business_radio"
            style="@style/tab_radio_style"
            android:drawableTop="@drawable/tab_business_selector"
            android:text="@string/business_sigh_in" />

        <RadioButton
            android:id="@+id/user_radio"
            style="@style/tab_radio_style"
            android:drawableTop="@drawable/tab_user_selector"
            android:text="@string/user" />
    </RadioGroup>
</RelativeLayout>
